# poly-multiproof

./: .gitattributes  .gitignore  2_setup.html  404.html  4_method2.html  Cargo.toml  README.md  a_optimizations.html  bench_for_plots.sh  build_docs.sh  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy.yml
benches/: bench.rs  mini_bench.rs  pmp_bench.rs  precomp_bench.rs
doc/: katex-header.html
examples/: data_availability_grid.rs
html/: 1_overview.html  3_method1.html  index.html  print.html  searchindex.json
spec/: book.toml
spec/src/: 1_overview.md  2_setup.md  3_method1.md  4_method2.md  SUMMARY.md  a_optimizations.md
src/: kzg.rs  lagrange.rs  lib.rs  method1.rs  method1_precomp.rs  method2.rs  msm.rs  poly_ops.rs  testing.rs  traits.rs  utils.rs
src/m1_blst/: cyclic_precomp.rs  fast_msm.rs  kzg.rs  mod.rs  precompute.rs
src/m1_cycl/: mod.rs
src/method1/: mod.rs  precompute.rs
src/method2/: mod.rs  precompute.rs
