[package]
name = "poly-multiproof"
authors = ["William Arnold (willarnold@berkeley.edu)"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4.0-alpha"
ark-ec = "0.4.0-alpha.7"
ark-ff = "0.4.0-alpha.7"
ark-poly = "0.4.0-alpha.7"
ark-serialize = "0.4.0-alpha.7"
merlin = "3"
thiserror = "1.0.37"
rayon = { version = "1.6", optional = true }

blst = { version = "0.3.10", optional = true, features = [ "no-threads"], git = "https://github.com/aphoh/blst", rev = "556e037926d9c526c2eb6cb1522bea39690416ea" }
ark-bls12-381 = { version = "0.4.0-alpha.2", optional = true }

[dev-dependencies]
ark-bls12-381 = "0.4.0-alpha.2"
criterion = "0.4"
rand = { version = "*", features = ["getrandom", "std"] }

[features]
asm = ["ark-ff/asm"]
print-trace = ["ark-std/print-trace"]
debug-transcript = ["merlin/debug-transcript"]
blst = ["dep:blst", "ark-bls12-381"]
parallel = ["rayon"]

[[bench]]
name = "bench"
harness = false

[[example]]
name = "data_availability_grid"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./doc/katex-header.html"]
