[package]
name = "poly-multiproof"
authors = ["William Arnold (willarnold@berkeley.edu)"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
merlin = { version = "3", default-features = false }

thiserror = { version = "1.0.37", optional = true }
rayon = { version = "1.6", optional = true }

blst = { version = "0.3.12", optional = true, features = [ "no-threads"], default-features = false }
ark-bls12-381 = { version = "0.4.0", optional = true }

[dev-dependencies]
ark-bls12-381 = "0.4.0"
criterion = "0.4"
rand = { version = "*", features = ["getrandom", "std"] }

[features]
default = ["std", "blst"]
std = ["thiserror", "ark-std/std", "ark-ec/std", "ark-ff/std", "ark-poly/std", "ark-serialize/std", "merlin/std"]
asm = ["std", "ark-ff/asm"]
print-trace = ["ark-std/print-trace"]
debug-transcript = ["std", "merlin/debug-transcript"]
blst = ["dep:blst", "ark-bls12-381"]
parallel = ["rayon", "std"]

[[bench]]
name = "bench"
harness = false

[[example]]
name = "data_availability_grid"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./doc/katex-header.html"]

[package.metadata.cargo-all-features]
allowlist = ["blst", "asm", "parallel", "std"]
